load all and 26

--- a/kmean.ipynb
+++ b/kmean.ipynb
@@ -56,7 +56,8 @@
     "    ! shred -u setup_google_colab.py\n",
     "    ! wget --no-check-certificate https://raw.githubusercontent.com/PierreLavency/EntArch/master/setup_google_colab.py -O setup_google_colab.py\n",
     "    import setup_google_colab\n",
-    "    setup_google_colab.load_data()\n",
+    "    setup_google_colab.load_data('all')\n",
+    "    setup_google_colab.load_data(26)\n",
     "    dirname=\"\""
    ]
   },
